tests/ui/impl-trait/ice-148622-opaque-as-const-generics.stderr
error: `Opaque` is forbidden as the type of a const generic parameter
  --> $DIR/ice-148622-opaque-as-const-generics.rs:6:20
   |
LL | trait Foo<const N: Opaque> {
   |                    ^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: the constant `N` is not of type `usize`
  --> $DIR/ice-148622-opaque-as-const-generics.rs:8:22
   |
LL |     fn bar(&self) -> [u8; N];
   |                      ^^^^^^^ expected `usize`, found future
   |
note: this item must have a `#[define_opaque(Opaque)]` attribute to be able to define hidden types
  --> $DIR/ice-148622-opaque-as-const-generics.rs:8:8
   |
LL |     fn bar(&self) -> [u8; N];
   |        ^^^
   = note: the length of array `[u8; N]` must be type `usize`

error: unconstrained opaque type
  --> $DIR/ice-148622-opaque-as-const-generics.rs:3:19
   |
LL | pub type Opaque = impl std::future::Future;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Opaque` must be used in combination with a concrete type within the same crate

error: aborting due to 3 previous errors

